Issue #SB-5216 fix: breadcrumb alignment fix

--- a/src/app/client/src/app/modules/shared/components/card/card.component.css
+++ b/src/app/client/src/app/modules/shared/components/card/card.component.css
@@ -20,3 +20,6 @@
     display: flex;
     margin: -.875em -.5em -.875em 0;
 }
+.ui.cards>.card {
+    margin: .875em .5em .875em 0.1em;
+}
