--- a/src/app/client/src/styles.css
+++ b/src/app/client/src/styles.css
@@ -1524,7 +1524,7 @@ span.fancytree-title {
   /* box-shadow: 0 8px 6px -8px @tertiary-color;*/
   padding-top: 1em;
   padding-bottom: 1em;
-  padding-left: 0.3em;
+  padding-left: 0;
 }
 .popular-section > .card-section-header {
   font-weight: bold;
